syntax = "proto3";

package gotrader.v1;

option go_package = "github.com/jedi116/go-trader/proto/gotrader/v1;v1";

enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  DIRECTION_BUY = 1;
  DIRECTION_SELL = 2;
}

enum TradeStatus {
  TRADE_STATUS_UNSPECIFIED = 0;
  TRADE_STATUS_OPEN = 1;
  TRADE_STATUS_CLOSED = 2;
}

message Empty {}

message Instrument {
  string name = 1;
}

message Candle {
  string time = 1; // RFC3339
  double open = 2;
  double high = 3;
  double low = 4;
  double close = 5;
  int64 volume = 6;
}

message Trade {
  string id = 1;
  string instrument = 2;
  Direction direction = 3;
  double units = 4;
  double entry_price = 5;
  double exit_price = 6;
  TradeStatus status = 7;
  string created_at = 8; // RFC3339
}

message Recommendation {
  string id = 1;
  string instrument = 2;
  Direction direction = 3;
  double units = 4;
  string rationale = 5;
  string status = 6; // PENDING/EXECUTED
  string created_at = 7; // RFC3339
}


